# share

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yaml  pom.xml  settings.gradle.kts  setup.cfg  todo.md
backend/: Dockerfile  README.md  setup.cfg
backend/assets/: models.py  serializers.py  views.py
backend/assets/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/share/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/share/migrations/: 0001_initial.py  0002_asset_approved_alter_assetgroup_admin_group_and_more.py  0003_assetgroup_description_alter_assetgroup_open_and_more.py  0004_alter_asset_owner_alter_asset_price_rental_and_more.py  0005_transaction_owner.py  0006_alter_transaction_beschwerde.py  0007_asset_pic_assetgroup_pic.py  0008_asset_description_alter_asset_form_data.py  0009_transaction_accepted.py  0010_alter_asset_asset_group_alter_transaction_asset.py  0011_alter_transaction_asset.py  0012_alter_transaction_asset.py  0013_alter_transaction_asset.py  0014_remove_transaction_owner_transaction_requester.py  0015_remove_assetgroup_admin_group_and_more.py
backend/tests/: fixture.py  test_asset.py  test_asset_view.py  test_category_view.py  test_transaction.py  test_unit.py
backend/userprofiles/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/userprofiles/migrations/: 0001_initial.py  0002_alter_profile_city_alter_profile_post_code_and_more.py  0003_alter_profile_user.py  0004_profile_user_pic.py  0005_registration.py  (+1 more)
docs/: SUMMARY.md  (+3 more)
(+131 files in other folders)
