[metadata]
name = share
version = 0.0.1
author = gitlab_user
description = Some nice stuff to share and not to buy
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
install_requires =
    python_version >= "3.9"
    django


packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
include = backend*

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-mock
examples =
    pytest-cov

[tool:pytest]
addopts = --cov-branch --cov=wm_automation/ --cov-report=term --cov-report=xml:pytest-cobertura.xml --junitxml=pytest-junit.xml
testpaths =
    tests
